Removed VWAP from time bars for now.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,54 +2,278 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from finlib.bars import TimeBars\n",
+    "from finlib.tick_data import read_csv\n",
+    "from finlib.bars import time_bars\n",
     "\n",
-    "TimeBars()"
-   ],
+    "tick_data = read_csv('/home/victorvalentee/python_projects/data/test/binance_ticks.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Here it goes!\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>volume_contracts</th>\n",
+       "      <th>volume_dollars</th>\n",
+       "      <th>vwap</th>\n",
+       "      <th>buyer_maker_pct</th>\n",
+       "      <th>best_match_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00.594</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>7196.25</td>\n",
+       "      <td>7196.25</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>0.250798</td>\n",
+       "      <td>1804.802077</td>\n",
+       "      <td>7196.237919</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 00:00:01.503</td>\n",
+       "      <td>7195.25</td>\n",
+       "      <td>7196.24</td>\n",
+       "      <td>7196.24</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>1.293336</td>\n",
+       "      <td>9306.356791</td>\n",
+       "      <td>7195.621858</td>\n",
+       "      <td>0.058824</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 00:00:02.623</td>\n",
+       "      <td>7196.22</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>7196.24</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>0.528896</td>\n",
+       "      <td>3805.940374</td>\n",
+       "      <td>7196.008996</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 00:00:03.420</td>\n",
+       "      <td>7195.83</td>\n",
+       "      <td>7195.83</td>\n",
+       "      <td>7195.83</td>\n",
+       "      <td>7195.83</td>\n",
+       "      <td>0.089730</td>\n",
+       "      <td>645.681826</td>\n",
+       "      <td>7195.830000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 00:00:04.458</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>7195.24</td>\n",
+       "      <td>0.150432</td>\n",
+       "      <td>1082.394344</td>\n",
+       "      <td>7195.240000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44903</th>\n",
+       "      <td>2020-01-01 12:28:23.120</td>\n",
+       "      <td>7213.23</td>\n",
+       "      <td>7213.08</td>\n",
+       "      <td>7213.23</td>\n",
+       "      <td>7213.08</td>\n",
+       "      <td>0.093954</td>\n",
+       "      <td>677.698766</td>\n",
+       "      <td>7213.091149</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44904</th>\n",
+       "      <td>2020-01-01 12:28:24.244</td>\n",
+       "      <td>7213.08</td>\n",
+       "      <td>7212.69</td>\n",
+       "      <td>7213.08</td>\n",
+       "      <td>7210.63</td>\n",
+       "      <td>0.788641</td>\n",
+       "      <td>5687.701226</td>\n",
+       "      <td>7212.028319</td>\n",
+       "      <td>0.727273</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44905</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44906</th>\n",
+       "      <td>2020-01-01 12:28:26.092</td>\n",
+       "      <td>7212.06</td>\n",
+       "      <td>7212.12</td>\n",
+       "      <td>7212.16</td>\n",
+       "      <td>7211.97</td>\n",
+       "      <td>1.107114</td>\n",
+       "      <td>7984.493605</td>\n",
+       "      <td>7211.988652</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44907</th>\n",
+       "      <td>2020-01-01 12:28:27.625</td>\n",
+       "      <td>7211.94</td>\n",
+       "      <td>7211.94</td>\n",
+       "      <td>7211.94</td>\n",
+       "      <td>7211.94</td>\n",
+       "      <td>0.004909</td>\n",
+       "      <td>35.403413</td>\n",
+       "      <td>7211.940000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>44908 rows × 10 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<finlib.bars.TimeBars at 0x7f43c08b38e0>"
+       "                         time     open    close     high      low  \\\n",
+       "0     2020-01-01 00:00:00.594  7195.24  7196.25  7196.25  7195.24   \n",
+       "1     2020-01-01 00:00:01.503  7195.25  7196.24  7196.24  7195.24   \n",
+       "2     2020-01-01 00:00:02.623  7196.22  7195.24  7196.24  7195.24   \n",
+       "3     2020-01-01 00:00:03.420  7195.83  7195.83  7195.83  7195.83   \n",
+       "4     2020-01-01 00:00:04.458  7195.24  7195.24  7195.24  7195.24   \n",
+       "...                       ...      ...      ...      ...      ...   \n",
+       "44903 2020-01-01 12:28:23.120  7213.23  7213.08  7213.23  7213.08   \n",
+       "44904 2020-01-01 12:28:24.244  7213.08  7212.69  7213.08  7210.63   \n",
+       "44905                     NaT      NaN      NaN      NaN      NaN   \n",
+       "44906 2020-01-01 12:28:26.092  7212.06  7212.12  7212.16  7211.97   \n",
+       "44907 2020-01-01 12:28:27.625  7211.94  7211.94  7211.94  7211.94   \n",
+       "\n",
+       "       volume_contracts  volume_dollars         vwap  buyer_maker_pct  \\\n",
+       "0              0.250798     1804.802077  7196.237919         0.250000   \n",
+       "1              1.293336     9306.356791  7195.621858         0.058824   \n",
+       "2              0.528896     3805.940374  7196.008996         0.166667   \n",
+       "3              0.089730      645.681826  7195.830000         0.000000   \n",
+       "4              0.150432     1082.394344  7195.240000         1.000000   \n",
+       "...                 ...             ...          ...              ...   \n",
+       "44903          0.093954      677.698766  7213.091149         0.250000   \n",
+       "44904          0.788641     5687.701226  7212.028319         0.727273   \n",
+       "44905          0.000000        0.000000          NaN              NaN   \n",
+       "44906          1.107114     7984.493605  7211.988652         0.000000   \n",
+       "44907          0.004909       35.403413  7211.940000         0.000000   \n",
+       "\n",
+       "       best_match_pct  \n",
+       "0                 1.0  \n",
+       "1                 1.0  \n",
+       "2                 1.0  \n",
+       "3                 1.0  \n",
+       "4                 1.0  \n",
+       "...               ...  \n",
+       "44903             1.0  \n",
+       "44904             1.0  \n",
+       "44905             NaN  \n",
+       "44906             1.0  \n",
+       "44907             1.0  \n",
+       "\n",
+       "[44908 rows x 10 columns]"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "time_bars(tick_data, '1S')"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "74bd4fc9da32d1542383f52552a74091abf189c5dc1c26c2d6d7be8ba9f04f1f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('env': venv)"
-  },
-  "interpreter": {
-   "hash": "74bd4fc9da32d1542383f52552a74091abf189c5dc1c26c2d6d7be8ba9f04f1f"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
